# FlipFHE

./: CIFAR-10.py  CMakeLists.txt  FlipFHE-BFV.cpp  FlipFHE-image-Multiple-bitflips.cpp  FlipFHE-image-overhead.cpp  FlipFHE-image.cpp  FlipFHE-poly-overhead.cpp  FlipFHE-poly.cpp  README.md  data.npy
Data/: images.7z  result_polynomial.npy  true_result.npy
